rsvpApp/sass/screen.scss
@import "normalize";
@import "compass";
@import "susy";
@import "breakpoint";
@import "compass/layout/sticky-footer";


//Mixins
@mixin selectanimation($animation) {
    -webkit-transition: $animation;
    -moz-transition: $animation;
    -ms-transition: $animation;
    -o-transition: $animation;
    transition: $animation;
  }

//Variables

//colors 
$coral: #ee543b;
$darkblue: #002e53;
$darkgreen: #017e5e;
$lightgreen: #7bcbbf;
$offwhite: #fafafa;
$paleblue: #edf3f7;
$silvergrey: #e6f5ff;

//breakpoints
$mediumViewports: 700px;
$largeViewports: 1000px;

//Functions
@function -ts-color($rgbValue, $alpha:1){
	@return rgba($rgbValue, $alpha);
}



$susy: (
	columns: 12,
	gutters: 1/4,
	math:fluid,
	output: float,
	gutter-position: inside,
	global-box-sizing: border-box,
);

//susy's border-box sizing mix-in
@include border-box-sizing;

//compass sticky footer mixin
@include sticky-footer(80px, "#wrapper", "#push", "#footer");

/*
 ***********************************
 * base layout setup
 ***********************************
*/
html,
body {
	margin:0;
	padding:0;
	height:100%;
	color: -ts-color($darkblue);
	font-family: "proxima-nova", sans-serif;
}

#wrapper {
	@include container;
	min-height:100%;
	background-color: -ts-color($paleblue, 0.94);
}
header {
	@include span(full no-gutters);
	background-color:-ts-color($offwhite);
	border-bottom: 1px solid -ts-color($darkblue, 0.2);
	position:fixed;
	z-index:999;
	height:60px;
	@include breakpoint($mediumViewports){
		height:80px;
	}

}
#content {
	padding-top:75px;
	padding-bottom:80px;   /* Height of the footer element */
	//min-height:660px;
	@include breakpoint($mediumViewports){
		padding-top:95px;
	}
}
footer {
	@include span(full no-gutters);
	height:80px;
	border-top: 1px solid -ts-color($darkblue, 0.2);
	background-color: -ts-color($offwhite);
	color: -ts-color($lightgreen);
}
.sectionHeader{
	@include span(full);
	height:80px;
	overflow:hidden;
	color: -ts-color($coral);
	margin-bottom:1rem;;
	background-image: url("../imgs/festivities02.svg");
	background-size:cover;
	background-repeat: no-repeat;

	@include breakpoint($mediumViewports){
		@include span(full);
		height:80px;
		overflow:hidden;
		color: -ts-color($coral);
		margin-bottom:1rem;
		background-size:contain;
		background-position:60%;
	}
	@include breakpoint($largeViewports){
		background-position:80%;
	}
}
.sectionHeader h2{
	font-size:2.5rem;
	font-weight:200;
	width:span(full);
	padding-left:span(5);
	margin-top:2.3rem;

	@include breakpoint($mediumViewports){
		font-size: 3rem;
		width:span(full);
		padding-left:span(5.5);
		margin-top:1.8rem;
	}
	@include breakpoint($largeViewports){
		width:span(full);
		padding-left:span(8.5);
	}
}
/*
 ***********************************
 * Navigation 
 ***********************************
*/

#logo{
	width:3.6rem;
	height:3.6rem;
	@include breakpoint($mediumViewports){
		width:4.3rem;
		height:4.3rem;
	}
}
nav{
	@include span(full no-gutters);
	text-align:center;
	height:60px;
	margin-top:-0.8rem;
	@include breakpoint($mediumViewports){
		height:80px;
	}

}
nav > ul{
	width:span(full no-gutters);
	height:100%;
	list-style:none;
	margin-bottom: -16px;
	display:inline-block;
	padding:0;
	vertical-align:middle;
}
nav > ul li{
	display:none;
	@include breakpoint($mediumViewports){
		display:inline-block;
		padding:0;
		vertical-align:middle;
		width:span(1.5);
	}
}
nav > ul li a{
	@include breakpoint($mediumViewports){
		color: -ts-color($lightgreen);
		text-decoration:none;
		font-size: 1rem;
		line-height: 1.15rem;
		font-weight:400;
		&:hover {
			color: -ts-color($darkblue);
			@include selectanimation(all 0.3s ease-in);
		}
	}
}
#logoBox{
	display:inline-block;
	width:4.75rem;
	height:4.75rem;
	overflow:hidden;
	padding:0;
	@include breakpoint($mediumViewports){
		display:none;
	}
}
#desktopLogoBox{
	display:none;
	@include breakpoint($mediumViewports){	
		display:inline-block;
		width:4.75rem;
		height:4.75rem;
		overflow:hidden;
		padding:0;
		margin-left: auto;
		margin-right: auto;
	}
}
.mobileMenu{
	display:none;
	width: span(full);
	text-align: left;
	background-color: -ts-color($offwhite,0.8);
	border-bottom: 1px solid -ts-color($darkblue,0.45);
}
.mobileMenu ul{
	list-style: none;
	margin-left:2rem;
	padding-top:10px;
}
.mobileMenu ul li a{
	line-height: 1.8rem;
	font-size: 1.5rem;
	color: -ts-color($darkblue);
}
.opaque{
	background-color: -ts-color($offwhite);
}
/*
 ***********************************
 * Footer styles 
 ***********************************
*/
footer  > p{
	@include span(full no-gutters);
	font-size:0.7rem;
	text-align:center;
	margin-bottom:0.3rem;
	margin-top:0.4rem;
	padding-left:1rem;
	padding-right:1rem;
	&:last-of-type{
		margin-top:0;
	}
}
/*
 ***********************************
 * RSVP search page  
 ***********************************
*/

.searchBlock{
	@include span(full);
	margin-bottom:1rem;
	@include breakpoint($largeViewports){
		@include span(10);
		margin-left: span(1);
	}
}

.searchBlock p {
	@include span(11);
	margin-left:span(0.5);
	margin-bottom:2rem;
	@include breakpoint($mediumViewports){
		@include span(9);
		margin-left:span(1);
	}
	@include breakpoint($largeViewports){
		@include span(4 of 10);
		margin-left:span(3 of 10);
	}
}

.searchbox{
	font-size:2rem;
	height:2.6rem;
	width:span(11);
	margin-left:span(0.5);
	padding-left:10px;
	border: 1px solid -ts-color($darkblue,0.15);
	@include breakpoint($mediumViewports){
		width:span(8);
		margin-left: span(2);
	}
	@include breakpoint($largeViewports){
		@include span(4 of 10);
		margin-left: span(3 of 10);
	}
}
.searchBlock > .error{
	@include span(11);
	margin-left: span(0.5);
	font-size:1.1rem;
	font-weight:600;
	color: -ts-color($coral, 0.9);
	@include breakpoint($mediumViewports){
		width:span(8);
		margin-left: span(2);
	}
	@include breakpoint($largeViewports){
		@include span(4 of 10);
		margin-left: span(3 of 10);
	}

}
.searchsubmit{
	@include span(11);
	margin-top:1rem;
	margin-left: span(0.5);
	height:3rem;
	font-size:1.5rem;
	font-weight:300;
	color: -ts-color($silvergrey, 1);
	background-color: -ts-color($darkblue,1);
	border: none;
	&:hover{
		background-color: -ts-color($coral, 0.5);
	}
	&:active{
		background-color: -ts-color($coral, 0.8);	
	}
	@include breakpoint($mediumViewports){
		width:span(8);
		margin-left: span(2);

	}
	@include breakpoint($largeViewports){
		@include span(4 of 10);
		margin-left: span(3 of 10);
	}

}
/*
 ***********************************
 * RSVP lookup results page
 ***********************************
*/
.searchResult{
	@include span(full no-gutters);
	padding-left:1rem;
	padding-right:1rem;

}

.searchResult h3{
	font-size:1.5rem;
	margin-bottom:-0.5rem;
	margin-left:span(1);
	@include breakpoint($mediumViewports){
		margin-left: span(2);
	}
	@include breakpoint($largeViewports){
		margin-left: span(3);
	}
}
.searchResult ul{
	@include span(full no-gutters);
	margin-left:span(1);
	padding-left:1rem;
	list-style:none;
	@include breakpoint($mediumViewports){
		margin-left: span(2);
	}
	@include breakpoint($largeViewports){
		margin-left: span(3);
	}
}
.searchResult ul li{
	font-size:1.2rem;
	&:last-of-type{
		margin-bottom: 2rem;
	}
}
#buttonContainer{
	margin-left:span(0.5);
	@include breakpoint($mediumViewports){
		margin-left: span(2);
	}
	@include breakpoint($largeViewports){
		margin-left:span(3);
	}
}
.buttonLink{
	display:inline-block;
	width:span(11);
	height:3rem;
	padding-left:1rem;
	padding-right:1rem;
	padding-top:0.5rem;
	padding-bottom:0.5rem;
	margin-bottom:1rem;
	color: -ts-color($silvergrey, 1);
	background-color: -ts-color($darkblue,1);
	text-align:center;
	text-decoration:none;
	font-size:1.3rem;
	font-weight:300;
	&:hover{
		background-color: -ts-color($coral, 0.5);
	}
	&:active{
		background-color: -ts-color($coral, 0.8);	
	}
	@include breakpoint($mediumViewports){
		width:span(8);
	}
	@include breakpoint($largeViewports){
		@include span(4);
		margin-right: 1rem;

	}
}
.secondaryButton{
	background-color: -ts-color($lightgreen, 1.0);
}
/*
 ***********************************
 * RSVP response form
 ***********************************
*/
.respondFormContainer{
		@include span(full no-gutters);
		margin-bottom: 1rem;
		padding-left:1rem;
		padding-right:1rem;
}
.guestResponse{
	@include span(full no-gutters);
	padding-left:span(2);
	@include breakpoint($mediumViewports){
		@include span(9);
		padding-left:span(3);
	}
	@include breakpoint($largeViewports){
		@include span(4);
		&:nth-of-type(odd){
			@include span(6);
			padding-left:span(2);
		}

	}
}
.guestResponse > .drinkLabel{
	@include breakpoint($largeViewports){
		margin-top:3.5rem;
	}
}
.guestResponse h2{
	font-size:2.3rem;
	margin-bottom:0rem;
	font-weight:200;
}
.guestResponse p{
	margin-bottom:5px;
	margin-top:5px;
}
.guestResponse select{
	width:span(8);
	font-size:1.2rem;
	height:40px;
	@include breakpoint($largeViewports){
		@include span(full);
	}
}
.respondFormContainer  .searchsubmit{
	@include breakpoint($largeViewports){
		@include span(3 of 10);
		margin-left: span(3.5 of 10);
	}

}

/*
 ***********************************
 * RSVP results page
 ***********************************
*/
.guestResult{
	@include span(full no-gutters);
		padding-left:span(1);
		padding-right:span(1);
	@include breakpoint($mediumViewports){
		@include span(6);
		margin-left: span(3);
	}
	@include breakpoint($largeViewports){
		@include span(4);
		margin-left:0rem;
			&:nth-of-type(odd){
			margin-left: span(3);
		}
	}
}
.guestResult h2{
	font-size:2.3rem;
	margin-bottom:0rem;
	font-weight:200;
}
.guestResult p{
	margin-bottom:5px;
	margin-top:5px;
}
.resultsButton{
	margin-left:1rem;
	@include breakpoint($mediumViewports){
		margin-left: span(2);

	}
	@include breakpoint($largeViewports){
		@include span(3 of 10);
		margin-left: span(3.5 of 10);
		margin-top: 1rem;

	}
}

